--- a/client/src/components/FlightCard/style.scss
+++ b/client/src/components/FlightCard/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,400,600,800&display=swap');
+
 //Color Palette Variables
 $white : #F5F8f7;
 $cream1: #f7efd2;
@@ -29,8 +31,10 @@ $malbec: #351f39;
 
 
 .card{
-    background-color: $cream1;
+    background-color: $green1;
     color: $malbec;
     border-radius:0px;
+    font-family: 'Nunito', sans-serif;
 
 }
+
