was fucking around with fonts, unsuccesful

--- a/client/src/components/Navigation/style.scss
+++ b/client/src/components/Navigation/style.scss
@@ -30,6 +30,7 @@ $malbec: #351f39;
 
 
 .nav{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: $malbec;
     border-bottom: 3px solid $jacaranda;
     
