--- a/client/src/components/Navigation/style.scss
+++ b/client/src/components/Navigation/style.scss
@@ -28,7 +28,8 @@ $malbec: #351f39;
 
 .nav{
     background-color: $malbec;
-    border-bottom: 3px solid $jacaranda; 
+    // border-bottom: 3px solid $jacaranda; 
+    box-shadow: -3px 5px 5px $violet2;
     color: $jacaranda;
      /* unvisited link */
         a:link {
