2nd stage styling, near finish, need to maybe add animation

--- a/client/src/components/Pages/FlightPage/style.scss
+++ b/client/src/components/Pages/FlightPage/style.scss
@@ -45,9 +45,9 @@ $malbec: #351f39;
 }
 
 .btn:hover{
- background-color: $azulverde;
- color: $malbec;
- border-color: $azulverde;
+ background-color: $malbec;
+ color: $ivory;
+ border-color: $violet3;
  cursor: pointer;
  transition-property: background-color ease;
  transition-duration: .35s;  
