--- a/client/src/components/Pages/FlightPage/style.scss
+++ b/client/src/components/Pages/FlightPage/style.scss
@@ -26,12 +26,14 @@ $bolivia: #709fb0;
 $jacaranda: #726a95;
 $malbec: #351f39;
 
+
+
 .jumbo{
     background-color: rgba(255, 255, 255, 0.449);
     color: $malbec;
     border-radius: 0;
     padding: 15px 0;
-    background-image: url("../../../imgs/flight-bg.jpg");
+    background-image: url("../../../imgs/flight-bg-crop.png");
     background-size: cover;
     background-repeat: no-repeat;
     box-shadow: 2px 5px 10px $violet2;
@@ -54,6 +56,7 @@ $malbec: #351f39;
 
 }
 
+
 body{
     background-color: $white;
     font-family: 'Nunito', sans-serif;
@@ -73,8 +76,40 @@ body{
 
 }
 
-.form-control:focus{
-    border-color: #cccccc;
+.custom-select {
+    display: block;
+	font-size: 16px;
+	font-weight: 500;
+	color: $jacaranda;
+	width: 100%;
+	max-width: 100%;
+	box-sizing: border-box;
+	margin: 0;
+	border: 2px solid $jacaranda;
+	// box-shadow: 1px 2px 2px $orange4;
+	// border-radius: .5em;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background-color: $white;
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+	  linear-gradient(to bottom,$white 0%,$ivory 100%);
+	background-repeat: no-repeat, repeat;
+	background-position: right .7em top 50%, 0 0;
+	background-size: .65em auto, 100%;
+}
+.custom-select::-ms-expand {
+    display: none;
     
 }
+.custom-select:hover {
+	border-color: $azulverde;
+}
+.custom-select:focus {
 
+	color: $jacaranda;
+	outline: none;
+}
+.custom-select option {
+	font-weight:normal;
+}
