fixed calendar issue

--- a/client/src/components/FlightCard/style.scss
+++ b/client/src/components/FlightCard/style.scss
@@ -39,6 +39,7 @@ $malbec: #351f39;
     border: none;
     font-family: 'Open Sans Condensed', sans-serif;
     box-shadow: 5px 5px 10px $orange4;
+    z-index: -2;
 }
 
 // .cardhead{
