--- a/client/src/components/FlightCard/style.scss
+++ b/client/src/components/FlightCard/style.scss
@@ -34,6 +34,7 @@ $malbec: #351f39;
     background: rgb(83,77,108);
     background: linear-gradient(165deg, rgba(83,77,108,1) 0%, rgba(114,106,149,1) 1%, rgba(114,137,132,1) 3%, rgba(146,177,175,1) 11%, rgba(173,208,198,1) 30%, rgba(218,243,236,1) 72%, rgba(245,248,247,0.5290849616213673) 100%);
     width: 75%;
+    z-index: -1;
     margin: 0 0 25px 0;
     color: $malbec;
     border: none;
